# floppa-dns

./: .gitignore  Cargo.toml
migrations/: 0_init.sql
src/: api.rs  config.rs  dns.rs  main.rs  web.rs
static/: main.css
templates/: base.html  home.html  login.html
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: auth.ts  index.css  index.tsx
web/src/components/: authenticated.tsx  button.tsx  index.ts  input.tsx  link.tsx
web/src/pages/: account.tsx  create-account.tsx  dashboard.tsx  domains.tsx  home.tsx  login.tsx
