[package]
name = "floppa-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
hickory-server = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
redis = { version = "0.30", features = ["tokio-comp"] }
axum = "0.8"
