[package]
name = "floppa-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
hickory-server = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "ipnet", "uuid"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
argon2 = "0.5"
uuid = { version = "1.16", features = ["v4"] }
